[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Lamp.gd" type="Script" id=1]
[ext_resource path="res://Sounds/click.wav" type="AudioStream" id=2]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.498039, 0.729412, 0.458824, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.258824, 0.517647, 0.886275, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.882353, 0.372549, 0.372549, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 6.84174, 2.85285, 5.12812 )

[node name="InteractionPlatform" type="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.174194, -7.62939e-06, 0.188435 )
use_collision = true

[node name="Floor" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 15.055, 0, 0, 31.581 )
width = 114.684
height = 0.540819
depth = 8.1112
material = SubResource( 6 )

[node name="Wall" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.07187, -4.13474 )
use_collision = true
width = 14.0
height = 6.0
depth = 0.4
material = SubResource( 2 )

[node name="Lamp" type="CSGCombiner" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.62963, -2.71602 )
script = ExtResource( 1 )

[node name="LampSound" type="AudioStreamPlayer3D" parent="Lamp"]
stream = ExtResource( 2 )
unit_db = 8.496

[node name="LampShade" type="CSGCylinder" parent="Lamp"]
sides = 24
cone = true
material = SubResource( 4 )

[node name="LampShadeCutout" type="CSGCylinder" parent="Lamp"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.094573, 0 )
operation = 2
radius = 0.95
height = 0.95
sides = 24
cone = true

[node name="Bulb" type="CSGSphere" parent="Lamp"]
radius = 0.3
rings = 12

[node name="LampHolder" type="CSGCylinder" parent="Lamp"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.262666, -0.744664 )
radius = 0.1
height = 1.47247
material = SubResource( 5 )

[node name="LampLight" type="SpotLight" parent="Lamp"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.114903, 0 )
light_energy = 6.0
spot_range = 16.3931
spot_angle = 59.3877

[node name="Area" type="Area" parent="Lamp"]

[node name="CollisionShape" type="CollisionShape" parent="Lamp/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.34637, 3.33221 )
shape = SubResource( 7 )

[connection signal="area_entered" from="Lamp/Area" to="Lamp" method="_on_Area_area_entered"]
[connection signal="body_entered" from="Lamp/Area" to="Lamp" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Lamp/Area" to="Lamp" method="_on_Area_body_exited"]
